Stable State from Auth State 5.0: My Assets